@@ -1,5 +1,10 @@
 $Id$
 
+2016-03-14  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: work on LB provisioning corner cases; LBPRZ now
+	3 bits wide (in response to ticket #664)
+
 2016-03-14  Alex Samorukov  <samm@os2.kiev.ua>
 
 	drivedb.h:
